--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -40,6 +40,7 @@ diesel = { version = "2.2.10", default-features = false, features = [
     "time",
     "uuid",
     "serde_json",
+    "32-column-tables",
 ] }
 time = { version = "0.3.38", features = ["serde-human-readable"] }
 futures = { version = "0.3.31" }
