--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "scamplers-core",
     "scamplers-macros",
     "scamplers-schema",
+    "time",
     "uuid",
 ]
 default-members = ["scamplers-backend"]
@@ -13,7 +14,8 @@ default-members = ["scamplers-backend"]
 edition = "2024"
 
 [workspace.dependencies]
-bon = { version = "3.6.4" }
+js-sys = { version = "0.3.77" }
+getset = { version = "0.1.6" }
 clap = { version = "4.5.40", features = ["derive", "env"] }
 anyhow = "1.0.98"
 axum = { version = "0.8.4", default-features = false, features = [
@@ -32,17 +34,19 @@ regex = "1.11.1"
 axum-extra = { version = "0.10.1", features = ["typed-header", "query"] }
 camino = { version = "1.1.10", features = ["serde1"] }
 thiserror = "2.0.12"
-_uuid = { package = "uuid", version = "1.16.0", features = ["serde"] }
+_uuid = { package = "uuid", version = "1.16.0", features = ["serde", "v7"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = { version = "1.0.140" }
-diesel = { version = "2.2.10", default-features = false, features = [
+diesel = { version = "2.2.11", default-features = false, features = [
     "without-deprecated",
     "time",
     "uuid",
     "serde_json",
     "32-column-tables",
 ] }
-time = { version = "0.3.38", features = ["serde-human-readable"] }
+_time = { package = "time", version = "0.3.41", features = [
+    "serde-human-readable",
+] }
 futures = { version = "0.3.31" }
 valuable = { version = "0.1.1", features = ["derive"] }
 garde = { version = "0.22.0", features = ["derive", "email", "serde", "regex"] }
