--- a/rust/scamplers-core/Cargo.toml
+++ b/rust/scamplers-core/Cargo.toml
@@ -9,49 +9,30 @@ name = "scamplers_core"
 crate-type = ["lib", "cdylib"]
 
 [dependencies]
-bon = { workspace = true, optional = true }
+getset = { workspace = true }
 thiserror = { workspace = true }
 serde = { workspace = true }
-serde_json = { workspace = true, optional = true }
+serde_json = { workspace = true }
 diesel = { workspace = true, optional = true }
-time = { workspace = true }
+time = { path = "../time" }
 valuable = { workspace = true }
-strum = { workspace = true, optional = true }
-scraper = { workspace = true, optional = true }
-wasm-bindgen = { workspace = true, optional = true }
-garde = { workspace = true, optional = true }
+strum = { workspace = true }
+scraper = { workspace = true }
+wasm-bindgen = { workspace = true }
+garde = { workspace = true }
 scamplers-schema = { path = "../scamplers-schema", optional = true }
 uuid = { path = "../uuid" }
 scamplers-macros = { path = "../scamplers-macros" }
-reqwest = { workspace = true, optional = true }
-serde-wasm-bindgen = { workspace = true, optional = true }
-wasm-bindgen-futures = { workspace = true, optional = true }
-derive_builder = { workspace = true, optional = true }
+reqwest = { workspace = true }
+serde-wasm-bindgen = { workspace = true }
+wasm-bindgen-futures = { workspace = true }
+derive_builder = { workspace = true }
 
 [dev-dependencies]
 pretty_assertions = { workspace = true }
 
 [features]
-backend = [
-    "diesel",
-    "scamplers-schema",
-    "strum",
-    "scraper",
-    "garde",
-    "uuid/backend",
-    "serde_json",
-    "bon",
-]
-typescript = [
-    "wasm-bindgen",
-    "uuid/typescript",
-    "serde_json",
-    "serde-wasm-bindgen",
-    "reqwest",
-    "wasm-bindgen-futures",
-    "derive_builder",
-    "time/wasm-bindgen",
-]
+backend = ["diesel", "scamplers-schema", "uuid/backend"]
 
 [lints]
 workspace = true
