--- a/rust/time/Cargo.toml
+++ b/rust/time/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "uuid"
+name = "time"
 version = "0.1.0"
 edition.workspace = true
 
@@ -7,7 +7,8 @@ edition.workspace = true
 crate-type = ["cdylib", "lib"]
 
 [dependencies]
-_uuid = { workspace = true }
+js-sys = { workspace = true }
+_time = { workspace = true }
 serde = { workspace = true }
 diesel = { workspace = true, optional = true }
 diesel-async = { workspace = true, optional = true }
@@ -18,7 +19,7 @@ wasm-bindgen = { workspace = true }
 workspace = true
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-_uuid = { workspace = true, features = ["js"] }
+_time = { workspace = true, features = ["wasm-bindgen"] }
 
 [features]
 backend = ["diesel", "diesel-async"]
