--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -15,7 +15,6 @@ edition = "2024"
 
 [workspace.dependencies]
 js-sys = { version = "0.3.77" }
-getset = { version = "0.1.6" }
 clap = { version = "4.5.40", features = ["derive", "env"] }
 anyhow = "1.0.98"
 axum = { version = "0.8.4", default-features = false, features = [
@@ -34,7 +33,7 @@ regex = "1.11.1"
 axum-extra = { version = "0.10.1", features = ["typed-header", "query"] }
 camino = { version = "1.1.10", features = ["serde1"] }
 thiserror = "2.0.12"
-_uuid = { package = "uuid", version = "1.16.0", features = ["serde", "v7"] }
+_uuid = { package = "uuid", version = "1.11.0", features = ["serde", "v7"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = { version = "1.0.140" }
 diesel = { version = "2.2.11", default-features = false, features = [
@@ -84,9 +83,9 @@ proc-macro2 = { version = "1.0.95" }
 heck = { version = "0.5.0" }
 serde-wasm-bindgen = { version = "0.6.5" }
 wasm-bindgen-futures = { version = "0.4.50" }
-derive_builder = { version = "0.20.2" }
 pretty_assertions = { version = "1.4.1" }
 rstest = { version = "0.25.0", default-features = false }
+pyo3 = { version = "0.25.1", features = ["uuid", "time", "multiple-pymethods"] }
 
 [workspace.lints.clippy]
 pedantic = { level = "warn", priority = -1 }
