--- a/rust/scamplers-core/Cargo.toml
+++ b/rust/scamplers-core/Cargo.toml
@@ -9,7 +9,6 @@ name = "scamplers_core"
 crate-type = ["lib", "cdylib"]
 
 [dependencies]
-getset = { workspace = true }
 thiserror = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
@@ -26,7 +25,7 @@ scamplers-macros = { path = "../scamplers-macros" }
 reqwest = { workspace = true }
 serde-wasm-bindgen = { workspace = true }
 wasm-bindgen-futures = { workspace = true }
-derive_builder = { workspace = true }
+pyo3 = { workspace = true }
 
 [dev-dependencies]
 pretty_assertions = { workspace = true }
