--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -7,6 +7,7 @@ members = [
     "scamplers-schema",
     "time",
     "uuid",
+    "valid-string",
 ]
 default-members = ["scamplers-backend"]
 
@@ -33,7 +34,7 @@ regex = "1.11.1"
 axum-extra = { version = "0.10.1", features = ["typed-header", "query"] }
 camino = { version = "1.1.10", features = ["serde1"] }
 thiserror = "2.0.12"
-_uuid = { package = "uuid", version = "1.11.0", features = ["serde", "v7"] }
+_uuid = { package = "uuid", version = "1.17.0", features = ["serde", "v7"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = { version = "1.0.140" }
 diesel = { version = "2.2.11", default-features = false, features = [
@@ -85,7 +86,7 @@ serde-wasm-bindgen = { version = "0.6.5" }
 wasm-bindgen-futures = { version = "0.4.50" }
 pretty_assertions = { version = "1.4.1" }
 rstest = { version = "0.25.0", default-features = false }
-pyo3 = { version = "0.25.1", features = ["uuid", "time", "multiple-pymethods"] }
+pyo3 = { version = "0.25.1", features = ["uuid", "time"] }
 
 [workspace.lints.clippy]
 pedantic = { level = "warn", priority = -1 }
