--- a/rust/scamplers-core/Cargo.toml
+++ b/rust/scamplers-core/Cargo.toml
@@ -17,21 +17,32 @@ time = { path = "../time" }
 valuable = { workspace = true }
 strum = { workspace = true }
 scraper = { workspace = true }
-wasm-bindgen = { workspace = true }
 garde = { workspace = true }
 scamplers-schema = { path = "../scamplers-schema", optional = true }
 uuid = { path = "../uuid" }
 scamplers-macros = { path = "../scamplers-macros" }
 reqwest = { workspace = true }
+valid-string = { path = "../valid-string" }
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+pyo3 = { workspace = true }
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+wasm-bindgen = { workspace = true }
 serde-wasm-bindgen = { workspace = true }
 wasm-bindgen-futures = { workspace = true }
-pyo3 = { workspace = true }
 
 [dev-dependencies]
 pretty_assertions = { workspace = true }
 
 [features]
-backend = ["diesel", "scamplers-schema", "uuid/backend", "time/backend"]
+backend = [
+    "diesel",
+    "scamplers-schema",
+    "uuid/backend",
+    "time/backend",
+    "valid-string/backend",
+]
 
 [lints]
 workspace = true
