--- a/rust/valid-string/Cargo.toml
+++ b/rust/valid-string/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "time"
+name = "valid-string"
 version = "0.1.0"
 edition.workspace = true
 
@@ -7,19 +7,17 @@ edition.workspace = true
 crate-type = ["cdylib", "lib"]
 
 [dependencies]
-_time = { workspace = true }
+garde = { workspace = true }
 serde = { workspace = true }
 diesel = { workspace = true, optional = true }
 diesel-async = { workspace = true, optional = true }
 valuable = { workspace = true }
-
+thiserror = { workspace = true }
 
 [lints]
 workspace = true
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-_time = { workspace = true, features = ["wasm-bindgen"] }
-js-sys = { workspace = true }
 wasm-bindgen = { workspace = true }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
