--- a/rust/time/Cargo.toml
+++ b/rust/time/Cargo.toml
@@ -12,7 +12,7 @@ serde = { workspace = true }
 diesel = { workspace = true, optional = true }
 diesel-async = { workspace = true, optional = true }
 valuable = { workspace = true }
-
+pyo3 = { workspace = true, optional = true }
 
 [lints]
 workspace = true
@@ -22,8 +22,6 @@ _time = { workspace = true, features = ["wasm-bindgen"] }
 js-sys = { workspace = true }
 wasm-bindgen = { workspace = true }
 
-[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-pyo3 = { workspace = true }
-
 [features]
 backend = ["diesel", "diesel-async"]
+python = ["pyo3"]
