--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -86,7 +86,12 @@ serde-wasm-bindgen = { version = "0.6.5" }
 wasm-bindgen-futures = { version = "0.4.50" }
 pretty_assertions = { version = "1.4.1" }
 rstest = { version = "0.25.0", default-features = false }
-pyo3 = { version = "0.25.1", features = ["uuid", "time"] }
+pyo3 = { version = "0.25.1", features = [
+    "uuid",
+    "time",
+    "experimental-async",
+    "multiple-pymethods",
+] }
 
 [workspace.lints.clippy]
 pedantic = { level = "warn", priority = -1 }
