--- a/rust/uuid/Cargo.toml
+++ b/rust/uuid/Cargo.toml
@@ -12,6 +12,7 @@ serde = { workspace = true }
 diesel = { workspace = true, optional = true }
 diesel-async = { workspace = true, optional = true }
 valuable = { workspace = true }
+pyo3 = { workspace = true, optional = true }
 
 [lints]
 workspace = true
@@ -20,8 +21,6 @@ workspace = true
 _uuid = { workspace = true, features = ["js"] }
 wasm-bindgen = { workspace = true }
 
-[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-pyo3 = { workspace = true }
-
 [features]
 backend = ["diesel", "diesel-async"]
+python = ["pyo3"]
