--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -92,6 +92,7 @@ pyo3 = { version = "0.25.1", features = [
     "experimental-async",
     "multiple-pymethods",
 ] }
+bon = { version = "3.6.4" }
 
 [workspace.lints.clippy]
 pedantic = { level = "warn", priority = -1 }
