--- a/rust/scamplers-backend/Cargo.toml
+++ b/rust/scamplers-backend/Cargo.toml
@@ -35,6 +35,7 @@ argon2 = { workspace = true }
 axum-extra = { workspace = true }
 rand = { workspace = true }
 dotenvy = { workspace = true }
+valid-string = { path = "../valid-string" }
 
 [dev-dependencies]
 pretty_assertions = { workspace = true }
