the only thing that doesnt work is python

--- a/rust/scamplers-core/Cargo.toml
+++ b/rust/scamplers-core/Cargo.toml
@@ -42,7 +42,7 @@ backend = [
     "time/backend",
     "valid-string/backend",
 ]
-python = ["pyo3"]
+python = ["pyo3", "valid-string/python", "uuid/python", "time/python"]
 
 [lints]
 workspace = true
