--- a/rust/scamplers-core/pyproject.toml
+++ b/rust/scamplers-core/pyproject.toml
@@ -10,3 +10,6 @@ dependencies = []
 [build-system]
 requires = ["maturin>=1.8,<2.0"]
 build-backend = "maturin"
+
+[tool.maturin]
+features = ["python"]
