--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 resolver = "2"
 members = [
+    "any-value",
     "scamplers-backend",
     "scamplers-core",
     "scamplers-macros",
@@ -15,6 +16,8 @@ default-members = ["scamplers-backend"]
 edition = "2024"
 
 [workspace.dependencies]
+csv = { version = "1.3.1" }
+heck = { version = "0.5.0" }
 js-sys = { version = "0.3.77" }
 clap = { version = "4.5.40", features = ["derive", "env"] }
 anyhow = "1.0.98"
@@ -81,7 +84,6 @@ url = { version = "2.5.4", features = ["serde"] }
 syn = { version = "2.0.102", features = ["full"] }
 quote = { version = "1.0.40" }
 proc-macro2 = { version = "1.0.95" }
-heck = { version = "0.5.0" }
 serde-wasm-bindgen = { version = "0.6.5" }
 wasm-bindgen-futures = { version = "0.4.50" }
 pretty_assertions = { version = "1.4.1" }
@@ -91,6 +93,7 @@ pyo3 = { version = "0.25.1", features = [
     "time",
     "experimental-async",
     "multiple-pymethods",
+    "serde",
 ] }
 bon = { version = "3.6.4" }
 
