add python stub files that actually workkkkkkk

--- a/rust/scamplers-core/Cargo.toml
+++ b/rust/scamplers-core/Cargo.toml
@@ -38,6 +38,7 @@ wasm-bindgen-futures = { workspace = true }
 
 [dev-dependencies]
 pretty_assertions = { workspace = true }
+rstest = { workspace = true }
 
 [features]
 backend = [
