--- a/python/test_scamplers-core/pyproject.toml
+++ b/python/test_scamplers-core/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "maturin>=1.9.2",
     "maturin-import-hook>=0.3.0",
+    "pyright>=1.1.403",
     "pytest>=8.4.1",
     "scamplers-core",
 ]
