remove .ruff_cache and add step to python github action

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -19,3 +19,7 @@ jobs:
       - name: Run tests
         working-directory: python/test_scamplers-core
         run: uv run --module pytest
+
+      - name: Analyze types
+        working-directory: python/test_scamplers-core
+        run: uv run --module pyright
