--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -100,6 +100,8 @@ bon = { version = "3.6.4" }
 [workspace.lints.clippy]
 pedantic = { level = "warn", priority = -1 }
 get_first = "allow"
+missing-panics-doc = "allow"
+unsafe_derive_deserialize = "allow"
 
 [workspace.lints.rust]
 async_fn_in_trait = "allow"
