--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -35,6 +35,7 @@ jobs:
         working-directory: rust
         run: |
           cargo clippy --workspace --exclude scamplers-schema --all-features
+          rustup target add wasm32-unknown-unknown
           cargo clippy --package scamplers-core --target wasm32-unknown-unknown
 
       - name: Test
