--- a/rust/rustfmt.toml
+++ b/rust/rustfmt.toml
@@ -7,3 +7,4 @@ format_macro_matchers = true
 format_strings = true
 reorder_impl_items = true
 use_field_init_shorthand = true
+format_macro_bodies = true
