add python format and lint step to GH actions and fix the specimens rust test

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -23,3 +23,8 @@ jobs:
       - name: Analyze types
         working-directory: python/test_scamplers-core
         run: uv run --module pyright
+
+      - name: Lint and format
+        uses: astral-sh/ruff-action@v3
+        with:
+          src: python/test_scamplers-core
