theres a strange bug with the querying. glad i caught it but idk how to fix

--- a/rust/scamplers-backend/Cargo.toml
+++ b/rust/scamplers-backend/Cargo.toml
@@ -39,10 +39,12 @@ axum-extra = { workspace = true }
 rand = { workspace = true }
 dotenvy = { workspace = true }
 valid-string = { path = "../valid-string" }
+bon = { workspace = true }
 
 [dev-dependencies]
 pretty_assertions = { workspace = true }
 rstest = { workspace = true }
+time = { path = "../time", features = ["backend"] }
 
 [lints]
 workspace = true
