--- a/python/test_scamplers-core/pyproject.toml
+++ b/python/test_scamplers-core/pyproject.toml
@@ -5,6 +5,7 @@ readme = "README.md"
 authors = [{ name = "Ahmed Said", email = "ahmed.said@jax.org" }]
 requires-python = ">=3.13"
 dependencies = [
+    "fire>=0.7.0",
     "maturin>=1.9.2",
     "maturin-import-hook>=0.3.0",
     "pyright>=1.1.403",
@@ -25,4 +26,4 @@ venvPath = "."
 venv = ".venv"
 
 [tool.ruff.lint]
-ignore = ["E402", "F403"]
+ignore = ["E402", "F403", "F405"]
