--- a/python/scrape-chemistries/pyproject.toml
+++ b/python/scrape-chemistries/pyproject.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = ["fire>=0.7.0"]
+
+[tool.pyright]
+venvPath = "."
+venv = ".venv"
