--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -2,6 +2,7 @@
 resolver = "2"
 members = [
     "any-value",
+    "scamplers",
     "scamplers-backend",
     "scamplers-core",
     "scamplers-macros",
@@ -16,6 +17,8 @@ default-members = ["scamplers-backend"]
 edition = "2024"
 
 [workspace.dependencies]
+snafu = { version = "0.8.6" }
+base64 = { version = "0.22.1" }
 csv = { version = "1.3.1" }
 heck = { version = "0.5.0" }
 js-sys = { version = "0.3.77" }
@@ -96,8 +99,10 @@ pyo3 = { version = "0.25.1", features = [
     "serde",
     "anyhow",
 ] }
+pyo3-stub-gen = { version = "0.12.2", default-features = false }
 bon = { version = "3.6.4" }
 derive_more = { version = "2.0.1", features = ["try_into", "from"] }
+macro_rules_attribute = { version = "0.2.2" }
 
 [workspace.lints.clippy]
 pedantic = { level = "warn", priority = -1 }
