--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -2,22 +2,22 @@
 resolver = "2"
 members = [
     "any-value",
+    "scamplepy",
     "scamplers",
-    "scamplers-backend",
-    "scamplers-core",
+    # "scamplers-backend",
+    # "scamplers-core",
     "scamplers-macros",
     "scamplers-schema",
     "time",
     "uuid",
     "valid-string",
 ]
-default-members = ["scamplers-backend"]
+default-members = ["scamplers"]
 
 [workspace.package]
 edition = "2024"
 
 [workspace.dependencies]
-snafu = { version = "0.8.6" }
 base64 = { version = "0.22.1" }
 csv = { version = "1.3.1" }
 heck = { version = "0.5.0" }
@@ -44,6 +44,7 @@ _uuid = { package = "uuid", version = "1.17.0", features = ["serde", "v7"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = { version = "1.0.140" }
 diesel = { version = "2.2.11", default-features = false, features = [
+    "postgres",
     "without-deprecated",
     "time",
     "uuid",
@@ -65,11 +66,6 @@ testcontainers-modules = { version = "0.11.6", features = [
     "blocking",
 ] }
 diesel_migrations = { version = "2.2.0", features = ["postgres"] }
-diesel-async = { version = "0.5.2", features = [
-    "postgres",
-    "deadpool",
-    "async-connection-wrapper",
-] }
 tracing-appender = "0.2.3"
 tracing = { version = "0.1.41", features = ["valuable"] }
 tower = { version = "0.5.2", default-features = false }
@@ -102,7 +98,7 @@ pyo3 = { version = "0.25.1", features = [
 pyo3-stub-gen = { version = "0.12.2", default-features = false }
 bon = { version = "3.6.4" }
 derive_more = { version = "2.0.1", features = ["try_into", "from"] }
-macro_rules_attribute = { version = "0.2.2" }
+getrandom = { version = "0.3.3" }
 
 [workspace.lints.clippy]
 pedantic = { level = "warn", priority = -1 }
