--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -18,6 +18,7 @@ default-members = ["scamplers"]
 edition = "2024"
 
 [workspace.dependencies]
+deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
 base64 = { version = "0.22.1" }
 csv = { version = "1.3.1" }
 heck = { version = "0.5.0" }
