--- a/rust/scamplers/Cargo.toml
+++ b/rust/scamplers/Cargo.toml
@@ -7,6 +7,7 @@ edition.workspace = true
 crate-type = ["cdylib", "lib"]
 
 [dependencies]
+deadpool-diesel = { workspace = true }
 anyhow = { workspace = true }
 strum = { workspace = true }
 scamplers-schema = { path = "../scamplers-schema", optional = true }
