--- a/rust/scamplers/Cargo.toml
+++ b/rust/scamplers/Cargo.toml
@@ -46,6 +46,7 @@ valid-string = { path = "../valid-string" }
 bon = { workspace = true }
 pyo3 = { workspace = true, optional = true }
 pyo3-stub-gen = { workspace = true, optional = true }
+time = { path = "../time" }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = { workspace = true }
@@ -85,6 +86,7 @@ python = [
     "uuid/python",
     "valid-string/python",
     "any-value/python",
+    "time/python",
 ]
 
 
