--- a/rust/scamplers/Cargo.toml
+++ b/rust/scamplers/Cargo.toml
@@ -7,7 +7,7 @@ edition.workspace = true
 crate-type = ["cdylib", "lib"]
 
 [dependencies]
-deadpool-diesel = { workspace = true }
+deadpool-diesel = { workspace = true, optional = true }
 anyhow = { workspace = true }
 strum = { workspace = true }
 scamplers-schema = { path = "../scamplers-schema", optional = true }
@@ -15,7 +15,7 @@ scamplers-macros = { path = "../scamplers-macros" }
 thiserror = { workspace = true }
 base64 = { workspace = true }
 heck = { workspace = true }
-axum = { workspace = true, optional = true }
+axum = { workspace = true }
 any-value = { path = "../any-value" }
 csv = { workspace = true }
 camino = { workspace = true, optional = true }
@@ -26,7 +26,7 @@ serde = { workspace = true }
 garde = { workspace = true }
 uuid = { path = "../uuid" }
 valuable = { workspace = true }
-regex = { workspace = true, optional = true }
+regex = { workspace = true }
 reqwest = { workspace = true }
 url = { workspace = true }
 futures = { workspace = true, optional = true }
@@ -39,7 +39,7 @@ tracing = { workspace = true, optional = true }
 tracing-subscriber = { workspace = true, optional = true }
 tracing-appender = { workspace = true, optional = true }
 argon2 = { workspace = true }
-axum-extra = { workspace = true, optional = true }
+axum-extra = { workspace = true }
 rand = { workspace = true, optional = true }
 dotenvy = { workspace = true }
 valid-string = { path = "../valid-string" }
@@ -50,23 +50,25 @@ time = { path = "../time" }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = { workspace = true }
+js-sys = { workspace = true }
+reqwest = { workspace = true, features = [] }
 getrandom = { workspace = true, features = ["wasm_js"] }
 
 [dev-dependencies]
 pretty_assertions = { workspace = true }
 rstest = { workspace = true }
-time = { path = "../time", features = ["app"] }
 
 [features]
 app = [
+    "axum/tokio",
     "scamplers-schema",
-    "axum",
     "any-value/app",
+    "time/app",
     "camino",
     "clap",
     "diesel",
+    "deadpool-diesel",
     "uuid/app",
-    "regex",
     "futures",
     "tokio",
     "testcontainers-modules",
@@ -76,7 +78,6 @@ app = [
     "tracing",
     "tracing-subscriber",
     "tracing-appender",
-    "axum-extra",
     "rand",
     "valid-string/app",
 ]
