--- a/rust/scamplepy/Cargo.toml
+++ b/rust/scamplepy/Cargo.toml
@@ -7,9 +7,11 @@ edition.workspace = true
 crate-type = ["cdylib", "lib"]
 
 [dependencies]
+anyhow = { workspace = true }
 scamplers = { path = "../scamplers", features = ["python"] }
 pyo3 = { workspace = true }
 pyo3-stub-gen = { workspace = true }
+camino = { workspace = true }
 
 [lints]
 workspace = true
