--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,6 +18,12 @@ repos:
         entry: ./pre-commit_scripts/fix-typescript.sh
         language: script
         pass_filenames: false
+      
+      - id: generate-scamplepy-typestubs
+        name: Generate scamplepy typestubs
+        entry: ./pre-commit_scripts/generate-scamplepy-typestubs.sh
+        language: script
+        pass_filenames: false
 
   - repo: https://github.com/sqlfluff/sqlfluff
     rev: 3.4.0
