--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -29,18 +29,21 @@ jobs:
 
       - name: Build
         working-directory: rust
-        run: cargo build --package scamplers-backend
+        run: cargo build --package scamplers
 
       - name: Lint
         working-directory: rust
         run: |
           cargo clippy --workspace --exclude scamplers-schema --all-features
           rustup target add wasm32-unknown-unknown
-          cargo clippy --package scamplers-core --target wasm32-unknown-unknown
+          cargo clippy --package scamplers --target wasm32-unknown-unknown
 
       - name: Test
         working-directory: rust
         run: ./test.sh
 
-      - name: Compare typescript/scamplers-core/rust-src to rust/scamplers-core/src
-        run: diff --recursive typescript/scamplers-core/rust-src rust/scamplers-core/src
+      - name: Compare typescript/scamplers/rust-src to rust/scamplers/src
+        run: diff --recursive typescript/scamplers/rust-src rust/scamplers/src
+
+      - name: Compare typescript/scamplers/rust-src to rust/scamplers/src
+        run: diff --recursive typescript/scamplers/rust-src rust/scamplers/src
