--- a/rust/scamplepy/pyproject.toml
+++ b/rust/scamplepy/pyproject.toml
@@ -8,3 +8,6 @@ dependencies = []
 [build-system]
 requires = ["maturin>=1.9,<2.0"]
 build-backend = "maturin"
+
+[tool.ruff.lint]
+ignore = ["F403", "F405"]
