--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,9 +7,9 @@ repos:
         language: script
         pass_filenames: false
 
-      - id: build-scamplers-core
-        name: Build scamplers-core
-        entry: ./pre-commit_scripts/build-scamplers-core.sh
+      - id: build-scamplers-js
+        name: Build scamplers-js
+        entry: ./pre-commit_scripts/build-scamplers-js.sh
         language: script
         pass_filenames: false
 
@@ -18,7 +18,7 @@ repos:
         entry: ./pre-commit_scripts/fix-typescript.sh
         language: script
         pass_filenames: false
-      
+
       - id: generate-scamplepy-typestubs
         name: Generate scamplepy typestubs
         entry: ./pre-commit_scripts/generate-scamplepy-typestubs.sh
@@ -39,3 +39,4 @@ repos:
       - id: ruff-check
         args: [--fix]
       - id: ruff-format
+        exclude_types: [pyi]
