--- a/rust/scamplers/Cargo.toml
+++ b/rust/scamplers/Cargo.toml
@@ -11,10 +11,8 @@ name = "scamplers"
 required-features = ["app"]
 
 [dependencies]
-deadpool-diesel = { workspace = true, optional = true }
 anyhow = { workspace = true }
 strum = { workspace = true }
-scamplers-schema = { path = "../scamplers-schema", optional = true }
 scamplers-macros = { path = "../scamplers-macros" }
 thiserror = { workspace = true }
 base64 = { workspace = true }
@@ -22,10 +20,7 @@ heck = { workspace = true }
 axum = { workspace = true }
 any-value = { path = "../any-value" }
 csv = { workspace = true }
-camino = { workspace = true, optional = true }
-clap = { workspace = true, optional = true }
 serde_json = { workspace = true }
-diesel = { workspace = true, optional = true }
 serde = { workspace = true }
 garde = { workspace = true }
 uuid = { path = "../uuid" }
@@ -33,29 +28,36 @@ valuable = { workspace = true }
 regex = { workspace = true }
 reqwest = { workspace = true }
 url = { workspace = true }
-futures = { workspace = true, optional = true }
-tokio = { workspace = true, optional = true }
-testcontainers-modules = { workspace = true, optional = true }
-diesel_migrations = { workspace = true, optional = true }
-tower = { workspace = true, optional = true }
-tower-http = { workspace = true, optional = true }
-tracing = { workspace = true, optional = true }
-tracing-subscriber = { workspace = true, optional = true }
-tracing-appender = { workspace = true, optional = true }
 argon2 = { workspace = true }
 axum-extra = { workspace = true }
-rand = { workspace = true, optional = true }
 dotenvy = { workspace = true }
 valid-string = { path = "../valid-string" }
 bon = { workspace = true }
-pyo3 = { workspace = true, optional = true }
-pyo3-stub-gen = { workspace = true, optional = true }
 time = { path = "../time" }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = { workspace = true }
 js-sys = { workspace = true }
 wasm-bindgen-futures = { workspace = true }
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+rand = { workspace = true, optional = true }
+futures = { workspace = true, optional = true }
+tower = { workspace = true, optional = true }
+tower-http = { workspace = true, optional = true }
+camino = { workspace = true, optional = true }
+clap = { workspace = true, optional = true }
+scamplers-schema = { path = "../scamplers-schema", optional = true }
+tokio = { workspace = true, optional = true }
+diesel = { workspace = true, optional = true }
+testcontainers-modules = { workspace = true, optional = true }
+diesel_migrations = { workspace = true, optional = true }
+deadpool-diesel = { workspace = true, optional = true }
+pyo3 = { workspace = true, optional = true }
+pyo3-stub-gen = { workspace = true, optional = true }
+tracing = { workspace = true, optional = true }
+tracing-subscriber = { workspace = true, optional = true }
+tracing-appender = { workspace = true, optional = true }
 
 [dev-dependencies]
 pretty_assertions = { workspace = true }
