--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -17,14 +17,14 @@ jobs:
         uses: astral-sh/setup-uv@v6
 
       - name: Run tests
-        working-directory: python/test_scamplers-core
+        working-directory: python/test-scamplepy
         run: uv run --module pytest
 
       - name: Analyze types
-        working-directory: python/test_scamplepy
+        working-directory: python/test-scamplepy
         run: uv run --module pyright
 
       - name: Lint and format
         uses: astral-sh/ruff-action@v3
         with:
-          src: python/test_scamplers-core
+          src: python/test-scamplepy
