--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -29,14 +29,17 @@ jobs:
 
       - name: Build
         working-directory: rust
-        run: cargo build --package scamplers
+        run: |
+          cargo build --workspace --all-features
+          cargo build --workspace --exclude scamplepy --exclude scamplers-schema --target wasm32-unknown-unknown
 
       - name: Lint
         working-directory: rust
         run: |
-          cargo clippy --workspace --exclude scamplers-schema --all-features
+          cargo clippy --workspace --exclude scamplers-schema --features app
+          cargo clippy --workspace --exclude scamplers-schema --features python
           rustup target add wasm32-unknown-unknown
-          cargo clippy --package scamplers --target wasm32-unknown-unknown
+          cargo clippy --workspace --exclude scamplepy --exclude scamplers-schema --target wasm32-unknown-unknown
 
       - name: Test
         working-directory: rust
@@ -45,5 +48,9 @@ jobs:
       - name: Compare typescript/scamplers/rust-src to rust/scamplers/src
         run: diff --recursive typescript/scamplers/rust-src rust/scamplers/src
 
-      - name: Compare typescript/scamplers/rust-src to rust/scamplers/src
-        run: diff --recursive typescript/scamplers/rust-src rust/scamplers/src
+      - name: Regenerate Python typestubs and compare to committed typestubs
+        working-directory: rust/scamplepy
+        run: |
+          mkdir committed-typestubs && cp -r scamplepy/* committed-typestubs
+          cargo run
+          diff --recursvice committed-typestubs scamplepy
