--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -31,6 +31,7 @@ jobs:
         working-directory: rust
         run: |
           cargo build --workspace --all-features
+          rustup target add wasm32-unknown-unknown
           cargo build --workspace --exclude scamplepy --exclude scamplers-schema --target wasm32-unknown-unknown
 
       - name: Lint
