--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -40,7 +40,7 @@ camino = { version = "1.1.10", features = ["serde1"] }
 thiserror = "2.0.12"
 _uuid = { package = "uuid", version = "1.17.0", features = ["serde", "v7"] }
 serde = { version = "1.0.219", features = ["derive"] }
-serde_json = { version = "1.0.140" }
+serde_json = { version = "1.0.140", features = ["float_roundtrip"] }
 diesel = { version = "2.2.11", default-features = false, features = [
     "postgres",
     "without-deprecated",
