--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -55,5 +55,5 @@ jobs:
         working-directory: rust/scamplepy
         run: |
           mkdir committed-typestubs && cp -r scamplepy/* committed-typestubs
-          cargo run
+          cd .. && cargo run --package scamplepy
           diff --recursive committed-typestubs scamplepy
