--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,7 +26,7 @@ repos:
         pass_filenames: false
 
   - repo: https://github.com/sqlfluff/sqlfluff
-    rev: 3.4.0
+    rev: 3.4.2
     hooks:
       - id: sqlfluff-lint
         exclude: ^db/migrations/00000000000000_diesel_initial_setup/down\.sql|migrations/0009_library-type-specification/up\.sql$
@@ -34,9 +34,11 @@ repos:
         exclude: ^db/migrations/00000000000000_diesel_initial_setup/down\.sql|migrations/0009_library-type-specification/up\.sql$
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.12.5
+    rev: v0.12.11
     hooks:
       - id: ruff-check
         args: [--fix]
       - id: ruff-format
         exclude_types: [pyi]
+        # Ruff transforms `from foo import * # comment` to `from foo import *  # comment` for some reason (notice the extra space before the comment)
+        exclude: "rust/scamplepy/scamplepy(/.*)?/__init__\\.py"
