--- a/typescript/scamplers-frontend/package.json
+++ b/typescript/scamplers-frontend/package.json
@@ -4,8 +4,8 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
-		"build-scamplers-core": "cd ../.. && ./scripts/build-scamplers-core.sh",
-		"dev": "npm run build-scamplers-core && vite dev",
+		"build-scamplers": "cd ../.. && ./pre-commit_scripts/build-scamplers-js.sh",
+		"dev": "npm run build-scamplers && vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
@@ -18,37 +18,37 @@
 		"test:e2e": "playwright test"
 	},
 	"devDependencies": {
-		"@eslint/compat": "^1.3.0",
-		"@eslint/js": "^9.29.0",
-		"@playwright/test": "^1.53.0",
-		"@sveltejs/adapter-node": "^5.2.12",
-		"@sveltejs/kit": "^2.21.5",
-		"@sveltejs/vite-plugin-svelte": "^5.1.0",
-		"@tailwindcss/vite": "^4.1.10",
-		"@testing-library/jest-dom": "^6.6.3",
+		"@eslint/compat": "^1.3.1",
+		"@eslint/js": "^9.32.0",
+		"@playwright/test": "^1.54.2",
+		"@sveltejs/adapter-node": "^5.2.13",
+		"@sveltejs/kit": "^2.27.0",
+		"@sveltejs/vite-plugin-svelte": "^6.1.0",
+		"@tailwindcss/vite": "^4.1.11",
+		"@testing-library/jest-dom": "^6.6.4",
 		"@testing-library/svelte": "^5.2.4",
-		"daisyui": "^5.0.43",
-		"eslint": "^9.29.0",
-		"eslint-config-prettier": "^10.0.1",
-		"eslint-plugin-svelte": "^3.9.2",
-		"globals": "^16.0.0",
+		"daisyui": "^5.0.50",
+		"eslint": "^9.32.0",
+		"eslint-config-prettier": "^10.1.8",
+		"eslint-plugin-svelte": "^3.11.0",
+		"globals": "^16.3.0",
 		"jsdom": "^26.0.0",
-		"prettier": "^3.4.2",
+		"prettier": "^3.6.2",
 		"prettier-plugin-svelte": "^3.3.3",
-		"prettier-plugin-tailwindcss": "^0.6.12",
-		"svelte": "^5.34.3",
-		"svelte-check": "^4.0.0",
+		"prettier-plugin-tailwindcss": "^0.6.14",
+		"svelte": "^5.37.2",
+		"svelte-check": "^4.3.0",
 		"tailwindcss": "^4.0.0",
-		"typescript": "^5.8.3",
-		"typescript-eslint": "^8.34.0",
-		"vite": "^6.2.5",
-		"vite-plugin-wasm": "^3.4.1",
-		"vitest": "^3.2.3"
+		"typescript": "^5.9.2",
+		"typescript-eslint": "^8.38.0",
+		"vite": "^7.0.6",
+		"vite-plugin-wasm": "^3.5.0",
+		"vitest": "^3.2.4"
 	},
 	"dependencies": {
-		"@auth/core": "^0.39.0",
-		"@auth/sveltekit": "^1.9.1",
-		"@types/node": "^24.0.2",
+		"@auth/core": "^0.40.0",
+		"@auth/sveltekit": "^1.10.0",
+		"@types/node": "^24.1.0",
 		"scamplers": "file:../scamplers"
 	}
 }
