--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,6 @@
 services:
   postgres:
-    image: postgres:18beta3-alpine
+    image: postgres:18rc1-alpine
     restart: always
     user: root
     secrets:
