add library creation

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -108,3 +108,4 @@ missing_errors_doc = "allow"
 
 [workspace.lints.rust]
 async_fn_in_trait = "allow"
+deprecated = "allow" # pyo3_stub_gen uses deprecated functions from pyo3
