add the ability to create and query libraries from the client as well as query datasets in a phenomenal way. the only thing left to do is implement dataset creation

--- a/rust/scamplers/Cargo.toml
+++ b/rust/scamplers/Cargo.toml
@@ -34,6 +34,7 @@ dotenvy = { workspace = true }
 valid-string = { path = "../valid-string" }
 bon = { workspace = true }
 time = { path = "../time" }
+scraper = { workspace = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = { workspace = true }
