--- a/typescript/Dockerfile
+++ b/typescript/Dockerfile
@@ -17,6 +17,7 @@ RUN --mount=type=cache,target=/root/.npm \
 
 FROM deps as build
 
+
 RUN --mount=type=bind,source=scamplers-frontend/package.json,target=scamplers-frontend/package.json \
     --mount=type=bind,source=scamplers-frontend/package-lock.json,target=scamplers-frontend/package-lock.json \
     --mount=type=cache,target=/root/.npm \
@@ -26,11 +27,17 @@ RUN --mount=type=bind,source=scamplers-frontend/package.json,target=scamplers-fr
 COPY scamplers-frontend scamplers-frontend
 COPY scamplers scamplers
 
+ARG API_ADDRESS_SERVER
+ARG API_ADDRESS_CLIENT
+ARG API_PATH
+ENV API_ADDRESS_SERVER="${API_ADDRESS_SERVER}" PUBLIC_API_ADDRESS_CLIENT="${API_ADDRESS_CLIENT}" PUBLIC_API_PATH="${API_PATH}"
+
 RUN cd scamplers-frontend && npm run build
 
 FROM base as final
 
-ENV NODE_ENV production
+ARG NODE_ENV
+ENV NODE_ENV="${NODE_ENV}"
 
 USER node
 
