--- a/.env.sample
+++ b/.env.sample
@@ -5,8 +5,11 @@ SCAMPLERS_DB_NAME=""
 SCAMPLERS_AUTH_MICROSOFT_ENTRA_ID_ID=""
 SCAMPLERS_AUTH_MICROSOFT_ENTRA_ID_SECRET=""
 SCAMPLERS_AUTH_MICROSOFT_ENTRA_ID_ISSUER="https://login.microsoftonline.com/<tenant-id>/v2.0"
-SCAMPLERS_AUTH_SECRET=""
-SCAMPLERS_PUBLIC_URL="localhost"
-SCAMPLERS_FRONTEND_TOKEN=""
+SCAMPLERS_AUTH_SECRET="" # Run `npx auth secret` to generate this
+SCAMPLERS_PUBLIC_ADDRESS="" # For dev, set this to "localhost http://localhost"
+SCAMPLERS_TLS_SETTINGS="" # Settings to pass into caddy for TLS
+SCAMPLERS_FRONTEND_API_ADDRESS_SERVER="" # For development, set this to "http://scamplers-api:8000"
+SCAMPLERS_FRONTEND_API_ADDRESS_CLIENT="" # For development, set this to "http://localhost"
+SCAMPLERS_FRONTEND_TOKEN="" # A long, randomly generated, crypotgraphically secure string
 SCAMPLERS_SEED_DATA_PATH="seed_data.sample.json"
 SCAMPLERS_SEED_DATA="seed_data.sample.json"
