--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -32,7 +32,8 @@ jobs:
       - name: Build
         working-directory: rust
         run: |
-          cargo build --workspace --all-features
+          cargo build --workspace --features app
+          cargo build --workspace --features python
           rustup target add wasm32-unknown-unknown
           cargo build --workspace --exclude scamplepy --exclude scamplers-schema --target wasm32-unknown-unknown
 
