--- a/rust/valid-string/Cargo.toml
+++ b/rust/valid-string/Cargo.toml
@@ -15,6 +15,9 @@ thiserror = { workspace = true }
 pyo3 = { workspace = true, optional = true }
 pyo3-stub-gen = { workspace = true, optional = true }
 
+[dev-dependencies]
+rstest = { workspace = true}
+
 [lints]
 workspace = true
 
