--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -40,7 +40,7 @@ camino = { version = "1.2.0", features = ["serde1"] }
 thiserror = "2.0.16"
 _uuid = { package = "uuid", version = "1.18.1", features = ["serde", "v7"] }
 serde = { version = "1.0.226", features = ["derive"] }
-serde_json = { version = "1.0.145" }
+serde_json = { version = "1.0.145", features = ["float_roundtrip"] }
 diesel = { version = "2.3.2", default-features = false, features = [
     "postgres",
     "without-deprecated",
