--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -24,7 +24,7 @@ jobs:
           path: ~/.cargo/bin/diesel
 
   # Same with clippy
-  install-linux-clippy:
+  install-clippy:
     runs-on: ubuntu-latest
     steps:
       - name: Cache cargo files
@@ -39,14 +39,14 @@ jobs:
       - name: Upload clippy
         uses: actions/upload-artifact@v4
         with:
-          name: cargo
-          path: ~/.cargo/bin/cargo
+          name: clippy
+          path: ~/.cargo/bin/clippy-driver
 
   lint-app:
     runs-on: ubuntu-latest
     needs:
       - install-diesel_cli
-      - install-linux-clippy
+      - install-clippy
 
     steps:
       - name: Check out repository code
@@ -83,7 +83,7 @@ jobs:
       - name: Download clippy
         uses: actions/download-artifact@v5
         with:
-          name: cargo
+          name: clippy
 
       - name: Lint scamplepy
         working-directory: rust
@@ -92,6 +92,9 @@ jobs:
   lint-wasm:
     runs-on: ubuntu-latest
     steps:
+      - name: Check out repository code
+        uses: actions/checkout@v4
+
       - name: Cache cargo files
         uses: Swatinem/rust-cache@v2
         with:
