another CI test

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -69,7 +69,7 @@ jobs:
   lint-scamplepy:
     runs-on: ubuntu-latest
     needs:
-      - install-linux-clippy
+      - install-clippy
 
     steps:
       - name: Check out repository code
